# aicompliance_mcp

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  health.json  lambda_function.py  pyproject.toml  requirements.txt  run_tests.sh  setup.sh
app/: config.py  main.py
app/models/: chat.py  document.py
app/routers/: chat.py  documents.py  sessions.py
app/services/: llm.py  n8n.py  storage.py  template.py
app/templates/: model_card.html  model_card_md.md
docs/: architecture-diagram.txt
k8s/: namespace.yaml
k8s/api-gateway/: api-gateway-deployment.yaml
k8s/embedding/: embedding-deployment.yaml
k8s/eu-ai-act/: api-gateway-openrouter.yaml  openrouter-config.yaml
k8s/llm/: llm-deployment.yaml
k8s/monitoring/: prometheus.yaml
k8s/qdrant/: qdrant-deployment.yaml  vector-db-init-job.yaml
k8s/terminusdb/: Dockerfile  data-import-job.yaml  terminusdb-deployment.yaml
scripts/: deploy-openrouter.sh  process_eu_ai_act.py
src/api-gateway/: app.py
src/data_import/: Dockerfile  import_euaiact_data.py
src/embedding/: app.py
src/eu_ai_act_chatbot/: config.py
src/eu_ai_act_chatbot/api/: main.py
src/eu_ai_act_chatbot/generation/: llm_handler.py
src/eu_ai_act_chatbot/processors/: document_processor.py
src/eu_ai_act_chatbot/retrieval/: hybrid_retriever.py
src/llm/: app.py
src/schema/: terminusdb_schema.json
src/tests/: __init__.py  test_api.py
src/vector_db/: init_vector_db.py
tests/: conftest.py  test_chat_router.py  test_documents_router.py  test_llm_service.py  test_sessions_router.py
(+2 files in other folders)
